--- a/dev/debug.html
+++ b/dev/debug.html
@@ -8,10 +8,10 @@
 
 	<ul>
 		<li id="l1"><button id="b1" onclick="startNewGame()">Button 1</button></li>
-		<li id="l2"><button id="b2" onclick="getGameInfo('dice')">Button 2</button></li>
-		<li id="l3"><button id="b3" onclick="getGameInfo('roll')">Button 3</button></li>
-		<li id="l4"><button id="b4" onclick="getGameInfo()">Button 4</button></li>
-		<li id="l5"><button id="b5" onclick="">Button 5</button></li>
+		<li id="l2"><button id="b2" onclick="gameAction('dice')">Button 2</button></li>
+		<li id="l3"><button id="b3" onclick="gameAction('roll')">Button 3</button></li>
+		<li id="l4"><button id="b4" onclick="gameAction('uname&uname=oreo')">Button 4</button></li>
+		<li id="l5"><button id="b5" onclick="gameAction('uname&uname=oleo')">Button 5</button></li>
 		<li id="l6"><button id="b6" onclick="">Button 6</button></li>
 		<li id="l7"><button id="b7" onclick="">Button 7</button></li>
 	</ul>
@@ -48,7 +48,7 @@
 				});
 		}
 
-		function getGameInfo(action) {
+		function gameAction(action) {
 			fetch_url(GAME_ROUTE + "/" + gameID + "?action=" + action)
 				.then(text => DISPLAY.innerHTML += "<br>" + text);
 		}
