add toJson to observe

--- a/dev/debug.html
+++ b/dev/debug.html
@@ -7,13 +7,14 @@
 <body>
 
 	<ul>
-		<li id="l1"><button id="b1" onclick="startNewGame()">Button 1</button></li>
-		<li id="l2"><button id="b2" onclick="gameAction('dice')">Button 2</button></li>
-		<li id="l3"><button id="b3" onclick="gameAction('roll')">Button 3</button></li>
-		<li id="l4"><button id="b4" onclick="gameAction('uname&uname=oreo')">Button 4</button></li>
-		<li id="l5"><button id="b5" onclick="gameAction('uname&uname=oleo')">Button 5</button></li>
-		<li id="l6"><button id="b6" onclick="">Button 6</button></li>
-		<li id="l7"><button id="b7" onclick="">Button 7</button></li>
+		<li><button onclick="startNewGame()">Start Game</button></li>
+		<li><button onclick="gameAction('uname&uname=oreo')">Create Name</button></li>
+		<li><button onclick="gameAction('camels')">Check Camels</button></li>
+		<li><button onclick="gameAction('dice')">Check Dice</button></li>
+		<li><button onclick="gameAction('players')">Check Players</button></li>
+		<li><button onclick="gameAction('roll')">Roll</button></li>
+		<li><button onclick="gameAction('uname&uname=oleo')">Chenge Name</button></li>
+		<li><button onclick="">Button 7</button></li>
 	</ul>
 	<div>
 		<p id="result"></p>
