--- a/client/landing.html
+++ b/client/landing.html
@@ -3,11 +3,59 @@
 <head>
 	<meta charset="utf-8">
 	<title>Camel Up!</title>
+	<style type="text/css">
+		html, body {
+			margin: 0;
+			padding: 0;
+			height: 100vh;
+			background-color: #101;
+			animation: colorful 10s linear infinite;
+		}
+		* {
+			font-family: monospace;
+		}
+		#new_area {
+			position: relative;
+			top: 50%;
+			transform: translateY(-50%);
+			padding: 20px;
+			text-align: center;
+		}
+		input {
+			padding: 10px 30px;
+			font-size: 2em;
+			color: black;
+			text-shadow: 5px 5px 5px black;
+			background-color: yellow;
+			animation: colorful 5s linear infinite;
+			box-shadow: 0 0 100px 10px red;
+			border-radius: 2px;
+			border: none;
+			outline: none;
+			transition: all 0.6s;
+		}
+
+		input:hover {
+			cursor: pointer;
+			transform: translate(1px, 3px);
+			box-shadow: 0 0 100px 50px red;
+		}
+
+		@keyframes colorful {
+			0% {filter: hue-rotate(0deg)}
+			50% {filter: hue-rotate(190deg)}
+			100% {filter: hue-rotate(360deg)}
+		}
+	</style>
 </head>
 <body>
 	<!-- just need to introduce the game and allow creation of rooms -->
-	<form action="/create" method="GET">
-		<input type="submit" value="Create Game">
-	</form>
+	<!-- start button -->
+	<div id="new_area">
+		<form action="/create" method="GET">
+			<input type="submit" value="Create Game">
+		</form>
+	</div>
 </body>
 </html>
+
