--- a/client/game.html
+++ b/client/game.html
@@ -4,18 +4,25 @@
 	<meta charset="utf-8">
 	<title>GAME</title>
 	<style type="text/css">
+
+		/* variables */
+		:root {
+			--bg: #333;
+			--fg: #eee;
+		}
+
 		html, body {
 			padding: 0;
 			margin: 0;
-			background-color: #333;
-			color: #eee;
+			background-color: var(--bg);
+			color: var(--fg);
 		}
 		* {
 			box-sizing: border-box;
 			font-family: monospace;
 		}
 		a {
-			color: #eee;
+			color: var(--fg);
 		}
 
 		/*debug*/
@@ -27,7 +34,7 @@
 		#banner {
 			font-size: 2em;
 			background-color: black;
-			color: white;
+			color: var(--fg);
 			text-align: center;
 			padding: 15px;
 			transition: all 0.5s;
@@ -37,7 +44,7 @@
 		}
 		#banner:active {
 			transition: all 0.2s;
-			background-color: white;
+			background-color: var(--fg);
 		}
 
 		/*pick name*/
@@ -50,7 +57,7 @@
 			transition: all 1s;
 		}
 		#name-input:focus {
-			box-shadow: 0 0 60px #eee;
+			box-shadow: 0 0 60px var(--fg);
 			filter: hue-rotate(360deg);
 		}
 
@@ -66,7 +73,7 @@
 			padding: 10px 20px;
 			display: inline-block;
 			background-color: #222;
-			border: 2px solid #eee;
+			border: 2px solid var(--fg);
 			position: relative;
 			font-size: 1.5em;
 			transition: all 0.5s;
@@ -92,7 +99,7 @@
 			text-align: left;
 			margin: 0;
 			padding: 20px 40px;
-			box-shadow: 0 0 2px 2px #eee;
+			box-shadow: 0 0 2px 2px var(--fg);
 			background-color: #222;
 		}
 
@@ -104,7 +111,7 @@
 			width: 40px;
 			height: 40px;
 			border-radius: 4px;
-			border: 2px solid white;
+			border: 2px solid var(--fg);
 		}
 
 		/* camels */
@@ -126,28 +133,49 @@
 			transition-timing-function: cubic-bezier(.84,-0.33,.38,1.06);
 		}
 
+		/* tiles & traps */
+		#trap-area {
+
+		}
+		.trap-el {
+			display: inline-block;
+			height: 40px;
+			width: calc(100% / 20);
+			border: 1px dashed var(--fg);
+			transition: all 0.5s;
+		}
+		.trap-el:hover {
+			border-color: #2e2;
+		}
+		.trap1 {
+			background-color: #2e2;
+		}
+		.trap-1 {
+			background-color: #e22;
+		}
+
 		/* bets */
 		#bet-area {
 			padding: 10px 10px;
 			margin: 10px;
 			display: inline-block;
-			/*border: 1px solid #eee;*/
+			/*border: 1px solid var(--fg);*/
 		}
 		.bet-el {
 			user-select: none;
-			color: #eee;
+			color: var(--fg);
 			text-shadow: 2px 2px 4px #000;
 			font-size: 3em;
 			padding: 20px;
 			display: inline-block;
 			transition: all 0.2s;
-			border: 2px solid #eee;
+			border: 2px solid var(--fg);
 			border-radius: 4px;
 		}
 		.bet-el.active:hover {
 			cursor: pointer;
 			transform: translate(-2px, -2px);
-			box-shadow: 2px 2px #eee;
+			box-shadow: 2px 2px var(--fg);
 		}
 		.active {
 			filter: brightness(0.9);
@@ -197,6 +225,10 @@
 		<span class="camel-el"></span>
 	</div>
 
+	<!-- traps -->
+	<div id="trap-area">
+	</div>
+
 	<!-- bets -->
 	<div id="bet-area">
 		<div>
@@ -207,7 +239,7 @@
 			<span class="bet-el active" onclick="placeBet(this)"></span>
 			<span class="bet-el active" onclick="placeBet(this)"></span>
 		</div>
-		<button onclick="placeTrap(1)">Put trap</button>
+		<button onclick="placeTrap(1)">Put trap 1</button>
 	</div>
 
 	<script type="text/javascript">
@@ -413,9 +445,19 @@
 			}
 		}
 
-		// show traps
+		var trap_area_el = document.getElementById('trap-area')
+		for (var i = 0; i < 20; i++) {
+			var trap_el = document.createElement("span")
+			trap_el.className = "trap-el"
+			trap_area_el.appendChild(trap_el)
+		}
+		// show traps {value, player, tile}
 		var updateTraps = (traps) => {
-			console.log(traps)
+			var traps_el = document.querySelectorAll(".trap-el")
+			traps_el.forEach(el => el.className = "trap-el")
+			for (var trap of traps) {
+				traps_el[trap.tile].className = "trap-el trap" + trap.value
+			}
 		}
 
 		// name, coin
@@ -468,7 +510,8 @@
 			// show bets
 			getBet().then(b => updateBets(b))
 			// show traps
-			getTrap().then(t => console.log(t))
+
+			getTrap().then(t => updateTraps(t))
 		}
 
 		// auto start/login
